--- a/themes/unimi-calendar/i18n/en.yml
+++ b/themes/unimi-calendar/i18n/en.yml
@@ -5,10 +5,11 @@ ical_form: "Url of the calendar:"
 copy_btn: "Copy link"
 add_to_cal_title: "Add the calendar to your app"
 bug_title: "Found a bug or want to contribute?"
-bug_description: "If you have found a bug or something is not working or you want to contribute new instructions, you can open an issue or pull request on Github. The project is open source and public."
+bug_description: "If you have found a bug, something is not working or you want to contribute to the project, you can open an issue or a pull request on Github. The project is open source and public."
 wtf_title: "What is the purpose?"
 wtf_description: "This site take inspiration from \"<a href=\"https://unitncal.fgaz.me/\" target=\"_blank\">unitncal</a>\" project by fgaz. The site basically does a url replacement to generate the link to the calendar in <code>ical</code> format. The timetable calendar can then be added to your app via the functionality \"calendar subscription\".</p><p>This site does a trivial job and there are others ways to get the same link.</p>"
 alert_success: "✅ url copied into clipboard"
 alert_error: "⛔️ An error has occurred"
 invalid_url: "Invalid URL"
 copy_not_supported: "⚠️ Copying is not supported, you have to copy the link manually"
+guide_for: "Guide for "
