--- a/themes/unimi-calendar/i18n/it.yml
+++ b/themes/unimi-calendar/i18n/it.yml
@@ -12,3 +12,4 @@ alert_success: "✅ url copiato nella clipboard"
 alert_error: "⛔️ Si è verificato un errore"
 invalid_url: "URL non valido"
 copy_not_supported: "⚠️ La copia non è supportata, devi copiare il link manualmente"
+guide_for: "Guida per "
