added repo url in index.html

--- a/themes/unimi-calendar/i18n/it.yml
+++ b/themes/unimi-calendar/i18n/it.yml
@@ -5,7 +5,7 @@ ical_form: "Url del calendario da utilizzare:"
 copy_btn: "Copia link"
 add_to_cal_title: "Aggiungere il calendario alla propria app"
 bug_title: "Hai trovato un bug o vuoi contribuire?"
-bug_description: "Se hai trovato un bug, c'è qualcosa che non funziona o vuoi contribuire al progetto puoi aprire una issue oppure una pull request su Github. Il progetto è open source e pubblico."
+bug_description: "Se hai trovato un bug, c'è qualcosa che non funziona o vuoi contribuire al progetto puoi aprire una issue oppure una pull request su <a href=\"https://github.com/raffaelecalza/unimi-calendar/\">Github</a>. Il progetto è open source e pubblico."
 wtf_title: "A cosa serve?"
 wtf_description: "<p>Questo sito prende ispirazione dal progetto \"<a href=\"https://unitncal.fgaz.me/\" target=\"_blank\">unitncal</a>\" di fgaz. Il sito sostanzialmente effettua una sostituzione nell'url affinché venga generato il link del calendario in formato <code>ical</code>. Il calendario delle lezioni può essere aggiunto alla propria app tramite la funzionalità di iscrizione al calendario.</p><p>Ciò che fa questo sito di per se è banale e ci sono anche altre modi per riuscire ad ottenere lo stesso link.</p>"
 alert_success: "✅ url copiato nella clipboard"
