--- a/themes/unimi-calendar/i18n/en.yml
+++ b/themes/unimi-calendar/i18n/en.yml
@@ -13,3 +13,4 @@ alert_error: "⛔️ An error has occurred"
 invalid_url: "Invalid URL"
 copy_not_supported: "⚠️ Copying is not supported, you have to copy the link manually"
 guide_for: "Guide for "
+disclaimer: "This project is not affiliated in any manner with University of Milan."
