--- a/themes/unimi-calendar/i18n/it.yml
+++ b/themes/unimi-calendar/i18n/it.yml
@@ -13,3 +13,4 @@ alert_error: "⛔️ Si è verificato un errore"
 invalid_url: "URL non valido"
 copy_not_supported: "⚠️ La copia non è supportata, devi copiare il link manualmente"
 guide_for: "Guida per "
+disclaimer: "Questo sito non è in alcun modo affiliato all'Università di Milano"
