--- a/themes/unimi-calendar/i18n/en.yml
+++ b/themes/unimi-calendar/i18n/en.yml
@@ -7,7 +7,7 @@ add_to_cal_title: "Add the calendar to your app"
 bug_title: "Found a bug or want to contribute?"
 bug_description: "If you have found a bug, something is not working or you want to contribute to the project, you can open an issue or a pull request on <a href=\"https://github.com/raffaelecalza/unimi-calendar/\">Github</a>. The project is open source and public."
 wtf_title: "What is the purpose?"
-wtf_description: "This site take inspiration from \"<a href=\"https://unitncal.fgaz.me/\" target=\"_blank\">unitncal</a>\" project by fgaz. The site basically does a url replacement to generate the link to the calendar in <code>ical</code> format. The timetable calendar can then be added to your app via the functionality \"calendar subscription\".</p><p>This site does a trivial job and there are others ways to get the same link.</p>"
+wtf_description: "<p>This site take inspiration from \"<a href=\"https://unitncal.fgaz.me/\" target=\"_blank\">unitncal</a>\" project by fgaz. The site basically does a url replacement to generate the link to the calendar in <code>ical</code> format. The timetable calendar can then be added to your app via the functionality \"calendar subscription\".</p><p>This site does a trivial job and there are others ways to get the same link.</p>"
 alert_success: "✅ url copied into clipboard"
 alert_error: "⛔️ An error has occurred"
 invalid_url: "Invalid URL"
