--- a/themes/unimi-calendar/i18n/en.yml
+++ b/themes/unimi-calendar/i18n/en.yml
@@ -1,14 +1,18 @@
 instructions_title: "Instructions"
-instructions_description: "First, go to the unimi <a href=\"https://easystaff.divsi.unimi.it/PortaleStudenti/index.php?view=easycourse&_lang=en\" target=\"_blan\">timetable portal</a>, choose how you want to view your timetable (<em>degree</em>, <em>lecturer</em> or <em>course</em>) and configure your search parameters. Click on <code>View timetable</code> button and wait for the timetable to load. Once the page has loaded, copy the url of the page from the address bar of your browser and paste it below. Once you have pasted the url, the calendar link will be generated and can then be imported into your calendar application (if you need help setting this up, see the <a href=\"#help\">section below</a>)."
+instructions_1: "Go to the unimi <a href=\"https://easystaff.divsi.unimi.it/PortaleStudenti/index.php?view=easycourse&_lang=en\" target=\"_blan\">timetable portal</a>"
+instructions_2: "Choose how you want to view your timetable (<em>degree</em>, <em>lecturer</em> or <em>course</em>) and configure your search parameters"
+instructions_3: "Click on <code>View timetable</code> button and wait for the timetable to load"
+instructions_4: "Once the page has loaded, copy the url of the page from the address bar of your browser and paste it below"
+instructions_5: "The calendar link will be generated and can then be imported into your calendar application (if you need help setting this up, see the <a href=\"#help\">section below</a>)"
 url_form: "Insert url of the timetable:"
 ical_form: "Url of the calendar:"
 copy_btn: "Copy link"
 add_to_cal_title: "Add the calendar to your app"
 bug_title: "Found a bug or want to contribute?"
-bug_description: "If you have found a bug, something is not working or you want to contribute to the project, you can open an issue or a pull request on <a href=\"https://github.com/raffaelecalza/unimi-calendar/\">Github</a>. The project is open source and public."
-wat_title: "What is the purpose?"
-wat_description: "<p>This site take inspiration from \"<a href=\"https://unitncal.fgaz.me/\" target=\"_blank\">unitncal</a>\" project by fgaz. The site basically does a url replacement to generate the link to the calendar in <code>ical</code> format. The timetable calendar can then be added to your app via the functionality \"calendar subscription\".</p><p>This site does a trivial job and there are others ways to get the same link.</p>"
-alert_success: "✅ url copied into clipboard"
+bug_description: "If you find a bug, something is not working or you want to contribute to the project, open an issue or a pull request on <a href=\"https://github.com/raffaelecalza/unimi-calendar/\">Github</a>. The project is open source and public."
+wat_description: "<p>The unimi webapp allows you to download the <code>.ics</code> file containing the classes in your academic schedule, but the tricky part is getting the link to the file. The purpose of this site is to make it easier to get the url of the ical format of your timetable to add it as a \"calendar subscription\" in your device's calendar app.</p><p>In this way, your class schedule will be synchronized automatically (e.g. if a lesson is canceled or extra lessons are added, your calendar will be updated) and you will no longer need to use the unimi service to view your timetable.</p>"
+wat_credits: "this site take inspiration from \"<a href=\"https://unitncal.fgaz.me/\" target=\"_blank\">unitncal</a>\" by fgaz."
+alert_success: "✅ Url copied to clipboard"
 alert_error: "⛔️ An error has occurred"
 invalid_url: "Invalid URL"
 copy_not_supported: "⚠️ Copying is not supported, you have to copy the link manually"
