--- a/themes/unimi-calendar/i18n/it.yml
+++ b/themes/unimi-calendar/i18n/it.yml
@@ -1,13 +1,17 @@
 instructions_title: "Istruzioni"
-instructions_description: "Per prima cosa vai sul <a href=\"https://easystaff.divsi.unimi.it/PortaleStudenti/index.php?view=easycourse\" target=\"_blank\">portale degli orari</a> di unimi, scegli la modalità di visualizzazione del calendario (<em>corso</em>, <em>docente</em> o <em>insegnamento</em>) e configura i parametri di ricerca. Clicca sul pulsante <code>Mostra orario</code> e attendi il caricamento dell'orario. Una volta che la pagina è stata caricata, copia l'url della pagina dalla barra degli indirizzi del tuo browser e incollala qui sotto. Appena incollato l'url, verrà generato il link del calendario che poi potrà essere importato all'interno dell'applicazione che utilizzi come calendario (se hai bisogno di un aiuto per la configurazione vedi la <a href=\"#help\">sezione sotto</a>)."
+instructions_1: "Vai sul <a href=\"https://easystaff.divsi.unimi.it/PortaleStudenti/index.php?view=easycourse\" target=\"_blank\">portale degli orari</a> di unimi"
+instructions_2: "Scegli la modalità di visualizzazione del calendario (<em>corso</em>, <em>docente</em> o <em>insegnamento</em>) e configura i parametri di ricerca"
+instructions_3: "Clicca sul pulsante <code>Mostra orario</code> e attendi il caricamento dell'orario"
+instructions_4: "Una volta che la pagina è stata caricata, copia l'url della pagina dalla barra degli indirizzi del tuo browser e incollala qui sotto"
+instructions_5: "Appena incollato l'url, verrà generato il link del calendario che poi potrà essere importato all'interno dell'applicazione che utilizzi come calendario (se hai bisogno di un aiuto per la configurazione vedi la <a href=\"#help\">sezione sotto</a>)"
 url_form: "Inserisci l'url dell'orario:"
 ical_form: "Url del calendario da utilizzare:"
 copy_btn: "Copia link"
 add_to_cal_title: "Aggiungere il calendario alla propria app"
 bug_title: "Hai trovato un bug o vuoi contribuire?"
 bug_description: "Se hai trovato un bug, c'è qualcosa che non funziona o vuoi contribuire al progetto puoi aprire una issue oppure una pull request su <a href=\"https://github.com/raffaelecalza/unimi-calendar/\">Github</a>. Il progetto è open source e pubblico."
-wat_title: "A cosa serve?"
-wat_description: "<p>Questo sito prende ispirazione dal progetto \"<a href=\"https://unitncal.fgaz.me/\" target=\"_blank\">unitncal</a>\" di fgaz. Il sito sostanzialmente effettua una sostituzione nell'url affinché venga generato il link del calendario in formato <code>ical</code>. Il calendario delle lezioni può essere aggiunto alla propria app tramite la funzionalità di iscrizione al calendario.</p><p>Ciò che fa questo sito di per se è banale e ci sono anche altre modi per riuscire ad ottenere lo stesso link.</p>"
+wat_description: "<p>La webapp di unimi permette di scaricare il file <code>.ics</code> contenente le lezioni del proprio orario accademico, ma la parte complessa è ottenere il link del file. Lo scopo di questo sito è rendere più facile ottenere l'url del formato ical del proprio orario per poterlo aggiungere come \"iscrizione al calendario\" all'interno dell'app calendario del proprio dispositivo.</p><p>In questo modo l'orario delle lezioni si sincronizzerà in automatico (ad esempio se viene cancellata una lezione oppure vengono aggiunte lezioni extra, il calendario si aggiornerà) e non si dovrà più utilizzare il servizio di unimi per visualizzare il proprio orario.</p>"
+wat_credits: "questo sito prende ispirazione dal progetto \"<a href=\"https://unitncal.fgaz.me/\" target=\"_blank\">unitncal</a>\" di fgaz."
 alert_success: "✅ url copiato nella clipboard"
 alert_error: "⛔️ Si è verificato un errore"
 invalid_url: "URL non valido"
